Replace scattered logging with centralized OrderLogService
Refactored logging across order services to use the centralized OrderLogService, ensuring consistent and structured log entries. Removed redundant logging and added semantic logging methods (e.g., for actions, notifications, and errors) in OrderLogService. Also introduced smaller improvements like `propagateError` in Result for cleaner error handling.